# teuthid

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT.md  LICENSE.LGPLv3  Makefile  README.in  README.md  TODO  configure  utests
cmake/: .gitignore  ArrayFireCPU-none.cmake  ArrayFireCPU.cmake  ArrayFireConfig.cmake  ArrayFireConfigVersion.cmake  ArrayFireOpenCL-none.cmake  ArrayFireOpenCL.cmake  ArrayFireUnified-none.cmake  ArrayFireUnified.cmake  CheckOutOfSourceBuild.cmake  FindLibGMP.cmake  FindMPFR.cmake  TeuthidCheckArrayFire.cmake  TeuthidCheckBoost.cmake  TeuthidCheckGMP.cmake  TeuthidCheckMPFR.cmake  TeuthidCheckOpenCL.cmake  TeuthidCheckOpenMP.cmake  TeuthidCheckTypes.cmake  TeuthidCompilerFlags.cmake  TeuthidCompilerOptions.cmake  TeuthidHelpers.cmake  TeuthidMessage.cmake  cl2_hpp_test.cpp  opencl_test.cpp
cmake/checks/: check_af_version.cpp  check_boost_compute.cpp  check_cl2hpp.cpp  check_cl_devices.c  check_gmp_version.cpp  check_mpfr_version.cpp  test.cl
doc/: .gitignore  CMakeLists.txt  doxyfile.in
doc/dox/: cl_device_info.dox  cl_platform_info.dox  clb_device.dox  clb_error.dox  clb_platform.dox  compute_device.dox  compute_platform.dox  floatmp.dox  floatmp_base.dox  library.dox  system.dox
examples/: CMakeLists.txt  cl_info.cpp  floating_mp.cpp  hello.cpp
include/: CMakeLists.txt
include/teuthid/: cl_device_info.hpp  cl_info.hpp  cl_platform_info.hpp  compute_device.hpp  compute_error.hpp  compute_platform.hpp  config.hpp.in  floatmp.hpp  library.hpp  system.hpp
include/teuthid/clb/: device.hpp  error.hpp  platform.hpp
src/: CMakeLists.txt  cl_device_info.cpp  cl_info.cpp  cl_platform_info.cpp  compute_device.cpp  compute_platform.cpp  floatmp.cpp  library.cpp  system.cpp
src/clb/: cl_bindings.hpp  device.cpp  error.cpp  platform.cpp
test/: CMakeLists.txt  class_cl_device_info.cpp  class_cl_platform_info.cpp  class_clb_device.cpp  class_clb_error.cpp  class_clb_platform.cpp  class_compute_device.cpp  class_compute_error.cpp  class_compute_platform.cpp  class_floatmp.cpp  class_library.cpp  class_system.cpp  hello.c  hello.cpp  opencl.cpp  opencl_test.cpp
